Fix older post date alignment

--- a/site/css/style.less
+++ b/site/css/style.less
@@ -83,10 +83,11 @@ img {
 .olderpostdate {
     font-size: 0.8em;
     color : @detailColor;
-    width: 65px;
+    width: 70px;
     margin-right: 10px;
     display: inline-block;
     text-align: end;
+    font-family: "Lucida Console", monaco, monospace;
 }
 
 header {
